# CombustionCodeGPU

./: BoundCond.cpp  BoundCond.cu  BoundCond.cuh  BoundCond.h  CMakeLists.txt  ChemData.cpp  ChemData.h  Constants.h  DPLURHPP.cuh  DParameter.cu  DParameter.h  DataCommunication.cu  DataCommunication.cuh  Define.h  Driver.cu  Driver.cuh  Driver.h  Element.cpp  Element.h  Field.cu  Field.h  FieldOperation.cuh  FiniteRateChem.cu  FiniteRateChem.cuh  ImplicitTreatmentHPP.cuh  Initialize.cu  Initialize.cuh  Initialize.h  InviscidScheme.cu  InviscidScheme.cuh  MPIIO.cu  MPIIO.hpp  Mesh.cpp  Mesh.cu  Mesh.h  Output.cu  Output.h  Output.hpp  Parallel.cpp  Parallel.h  (+21 more)
gxl_lib/: Array.hpp  Math.hpp  Matrix.hpp  MyString.cpp  MyString.h
input_files/boundary_condition/: boundary   0.txt  inner   0.txt  parallel   0.txt
input_files/chemistry/: combustion_mechanism.inp
input_files/grid/: grid   0.grd
input_files/setup/: 0_global_control.txt  2_scheme.txt  3_species_reactions.txt  4_laminar_turbulent.txt  5_boundary_condition.txt  8_initialization.txt  9_transport_property.txt
